# tcg_trove

./: .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  DEMO_SCRIPT.md  Dockerfile  GRADING_CHECKLIST.md  PROJECT_AUDIT.md  README.md  SCREENSHOT_CHECKLIST.md  TESTING_REPORT.md  UX_RESEARCH_NOTES.md  alembic.ini  docker-compose.yml  mypy.ini  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml  tcg_trove.db
.serena/: project.yml
alembic/: env.py
app/: main.py
backups/: tcg_trove-20260503-225747.db.bak  tcg_trove-20260504-045642.db.bak  tcg_trove-20260504-051042.db.bak  tcg_trove-20260504-051142.db.bak  tcg_trove-20260504-052132.db.bak
checkpoints/: 2026-05-04-baseline-checkpoint.md
docs/: AGENT_KNOWLEDGE_BASE.md  MCP_UI_UX_SETUP.md  PRODUCTION_READINESS.md  operations_runbook.md
frontend/: index.html  package-lock.json  package.json
scripts/: data_retention.py  db_backup.py  db_restore.py  dev_server.py  normalize_listing_locations.py  prod_preflight.py  reset_demo_db.py
tests/: test_api.py  test_config.py  test_load_smoke.py  test_production_preflight.py  test_tcg_trove_00122048e28548189c67f963442e555c.db  test_tcg_trove_0c4643a907d8432aab823e18a51333a2.db  test_tcg_trove_15ab788022d341b8933b4a739eeeef03.db  test_tcg_trove_1d76ccb3a39a43d7a82891ebe3458185.db  test_tcg_trove_219c39204d3845e598091c2470bd9ed6.db  test_tcg_trove_282e727dd33f41809dd857fd999c0e1b.db  test_tcg_trove_29386f669cfc4226ac178666327c0b40.db  test_tcg_trove_2e3e8a22c9154b129b2c1fbf6f0d50be.db  (+32 more)
(+157 files in other folders)
