[tool.poetry]
name = "tcg_troveapi"
version = "1.0.0"
description = "TCG Trove FastAPI web application"
authors = ["TCG Trove Team <noreply@tcg_trove.local>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "0.135.3"
uvicorn = { version = "0.44.0", extras = ["standard"] }
sqlalchemy = "2.0.48"
psycopg2-binary = "2.9.11"
redis = "6.4.0"
pydantic-settings = "2.13.1"
python-dotenv = "1.2.2"
email-validator = "2.3.0"
jinja2 = "3.1.6"
python-multipart = "0.0.20"
itsdangerous = "2.2.0"
alembic = "1.16.5"
playwright = "1.55.0"
sentry-sdk = "2.39.0"
Pillow = "11.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "9.0.2"
httpx = "0.28.1"
ruff = "0.12.12"
pytest-cov = "6.2.1"
bandit = "1.8.6"
pre-commit = "4.3.0"
mypy = "1.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
